# sibilant

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: sibilant.yml
sibilant/: __init__.py  _package_metadata.py  constants.py  exceptions.py  headers.py  helpers.py  messages.py  sdp.py  structures.py
sibilant/codecs/: __init__.py  base.py  g711.py
sibilant/rtp/: __init__.py  client.py  dtmf.py  packet.py  rtp.py
sibilant/sdp/: __init__.py  common.py  media.py  session.py  time.py
sibilant/sip/: __init__.py  client.py  headers.py  messages.py
sibilant/voip/: __init__.py  phone.py
tests/: conftest.py  sip_messages.dump  test_messages.py  test_rtp.py  test_sip.py  test_voip.py
tests/pcaps/: SIP_CALL_RTP_G711.pcap  SIP_DTMF2.pcap  aaa.pcap  sip-rtp-g711.pcap
