[project]
name = "sibilant"
description = "sibilant makes python communicate over VoIP"
homepage = "https://github.com/andreabak/sibilant"
authors = [
    {name = "abk16", email = "awaken.mulled505@4wrd.cc"}
]
version = "0.1.0"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}

[tool.setuptools]
license-files = ["LICENSE"]
